---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Info:
    - Move whitelist generation out of on_configuration_changed
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024. 12. 12
  Info:
    - Support gleba's stromatolites
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2024. 11. 15
  Info:
    - Suggest the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024. 11. 14
  Info:
    - Require the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024. 10. 31
  Info:
    - Support vulcanus chimneys
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024. 10. 23
  Info:
    - Ported to 2.0
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024. 09. 02
  Info:
    - Heal space exploration meteorites over time too
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024. 08. 09
  Info:
    - Fix rocks not healing at all
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024. 06. 26
  Info:
    - Fix practically inconsequential index typo
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 06. 26
  Info:
    - Fix rocks healing faster the more they they were damaged (thanks @stringweasel!)